--- a/index4.html
+++ b/index4.html
@@ -8,7 +8,7 @@
 <body align="center" bgcolor="grey">
     <h1 style="color:red;">Oh nu! Ai fost prins si ai devenit zombi!</h1>
     <hr>
-    <img src="https://lh3.googleusercontent.com/proxy/Uz0MIgEBKDlq5HKffGCGIrt4p3SwfFXwNJt2pWLb8GEkcxgn4xIqbKgiV9F9EB8EJhsjhrDb8RZdoAQ76W12_NMzDXh1PyRHp2pQarVcdMM5J_L6Q_kxvgMYDThF9uzvgBfaV1RHdC0P0Es4" width="400" height="500">
+    <img src="https://lh3.googleusercontent.com/proxy/Uz0MIgEBKDlq5HKffGCGIrt4p3SwfFXwNJt2pWLb8GEkcxgn4xIqbKgiV9F9EB8EJhsjhrDb8RZdoAQ76W12_NMzDXh1PyRHp2pQarVcdMM5J_L6Q_kxvgMYDThF9uzvgBfaV1RHdC0P0Es4"> width="400" height="500">
     <br>
     <button>
         <a href="index.html" target="_blank">
